trunk/Archive2/af/cff544cf9056bb/output
main.cpp:5:8: error: template parameters not used in partial specialization:
 struct hash<typename std::enable_if<std::is_enum<T>::value, T>::type> : public std::hash<typename std::underlying_type<T>::type> {};
        ^
main.cpp:5:8: error:         'T'
